--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -243,3 +243,51 @@ ListProgramCourseCreateLink=Create New ProgramCourse
 ListProgramCourseIndexLink=Index
 ListProgramCourseTitle_program=Program
 ListProgramCourseTitle_course=Course
+Feedback2013SuggestionsCreated=Feedback2013Suggestions was successfully created.
+Feedback2013SuggestionsUpdated=Feedback2013Suggestions was successfully updated.
+Feedback2013SuggestionsDeleted=Feedback2013Suggestions was successfully deleted.
+CreateFeedback2013SuggestionsTitle=Create New Feedback2013Suggestions
+CreateFeedback2013SuggestionsSaveLink=Save
+CreateFeedback2013SuggestionsShowAllLink=Show All Feedback2013Suggestions Items
+CreateFeedback2013SuggestionsIndexLink=Index
+CreateFeedback2013SuggestionsLabel_id=Id:
+CreateFeedback2013SuggestionsRequiredMessage_id=The Id field is required.
+CreateFeedback2013SuggestionsTitle_id=Id
+CreateFeedback2013SuggestionsLabel_uid=Uid:
+CreateFeedback2013SuggestionsTitle_uid=Uid
+CreateFeedback2013SuggestionsLabel_suggestions=Suggestions:
+CreateFeedback2013SuggestionsTitle_suggestions=Suggestions
+EditFeedback2013SuggestionsTitle=Edit Feedback2013Suggestions
+EditFeedback2013SuggestionsSaveLink=Save
+EditFeedback2013SuggestionsViewLink=View
+EditFeedback2013SuggestionsShowAllLink=Show All Feedback2013Suggestions Items
+EditFeedback2013SuggestionsIndexLink=Index
+EditFeedback2013SuggestionsLabel_id=Id:
+EditFeedback2013SuggestionsRequiredMessage_id=The Id field is required.
+EditFeedback2013SuggestionsTitle_id=Id
+EditFeedback2013SuggestionsLabel_uid=Uid:
+EditFeedback2013SuggestionsTitle_uid=Uid
+EditFeedback2013SuggestionsLabel_suggestions=Suggestions:
+EditFeedback2013SuggestionsTitle_suggestions=Suggestions
+ViewFeedback2013SuggestionsTitle=View
+ViewFeedback2013SuggestionsDestroyLink=Destroy
+ViewFeedback2013SuggestionsEditLink=Edit
+ViewFeedback2013SuggestionsCreateLink=Create New Feedback2013Suggestions
+ViewFeedback2013SuggestionsShowAllLink=Show All Feedback2013Suggestions Items
+ViewFeedback2013SuggestionsIndexLink=Index
+ViewFeedback2013SuggestionsLabel_id=Id:
+ViewFeedback2013SuggestionsTitle_id=Id
+ViewFeedback2013SuggestionsLabel_uid=Uid:
+ViewFeedback2013SuggestionsTitle_uid=Uid
+ViewFeedback2013SuggestionsLabel_suggestions=Suggestions:
+ViewFeedback2013SuggestionsTitle_suggestions=Suggestions
+ListFeedback2013SuggestionsTitle=List
+ListFeedback2013SuggestionsEmpty=(No Feedback2013Suggestions Items Found)
+ListFeedback2013SuggestionsDestroyLink=Destroy
+ListFeedback2013SuggestionsEditLink=Edit
+ListFeedback2013SuggestionsViewLink=View
+ListFeedback2013SuggestionsCreateLink=Create New Feedback2013Suggestions
+ListFeedback2013SuggestionsIndexLink=Index
+ListFeedback2013SuggestionsTitle_id=Id
+ListFeedback2013SuggestionsTitle_uid=Uid
+ListFeedback2013SuggestionsTitle_suggestions=Suggestions
