--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-codec-1.8.jar=/home/piit/Downloads/commons-codec-1.8.jar
 file.reference.commons-fileupload-1.3.jar=/home/piit/Downloads/commons-fileupload-1.3.jar
+file.reference.poi-3.9-20121203.jar=/home/piit/Downloads/poi-3.9/poi-3.9-20121203.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,7 +46,9 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.primefaces.classpath}:\
-    ${file.reference.commons-fileupload-1.3.jar}
+    ${file.reference.commons-fileupload-1.3.jar}:\
+    ${file.reference.commons-codec-1.8.jar}:\
+    ${file.reference.poi-3.9-20121203.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
