Implementation of Feedback360

--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -291,3 +291,51 @@ ListFeedback2013SuggestionsIndexLink=Index
 ListFeedback2013SuggestionsTitle_id=Id
 ListFeedback2013SuggestionsTitle_uid=Uid
 ListFeedback2013SuggestionsTitle_suggestions=Suggestions
+F360PeerInteractionCreated=F360PeerInteraction was successfully created.
+F360PeerInteractionUpdated=F360PeerInteraction was successfully updated.
+F360PeerInteractionDeleted=F360PeerInteraction was successfully deleted.
+CreateF360PeerInteractionTitle=Create New F360PeerInteraction
+CreateF360PeerInteractionSaveLink=Save
+CreateF360PeerInteractionShowAllLink=Show All F360PeerInteraction Items
+CreateF360PeerInteractionIndexLink=Index
+CreateF360PeerInteractionLabel_idF360PeerInteraction=IdF360PeerInteraction:
+CreateF360PeerInteractionRequiredMessage_idF360PeerInteraction=The IdF360PeerInteraction field is required.
+CreateF360PeerInteractionTitle_idF360PeerInteraction=IdF360PeerInteraction
+CreateF360PeerInteractionLabel_idFaculty=IdFaculty:
+CreateF360PeerInteractionTitle_idFaculty=IdFaculty
+CreateF360PeerInteractionLabel_uid=Uid:
+CreateF360PeerInteractionTitle_uid=Uid
+EditF360PeerInteractionTitle=Edit F360PeerInteraction
+EditF360PeerInteractionSaveLink=Save
+EditF360PeerInteractionViewLink=View
+EditF360PeerInteractionShowAllLink=Show All F360PeerInteraction Items
+EditF360PeerInteractionIndexLink=Index
+EditF360PeerInteractionLabel_idF360PeerInteraction=IdF360PeerInteraction:
+EditF360PeerInteractionRequiredMessage_idF360PeerInteraction=The IdF360PeerInteraction field is required.
+EditF360PeerInteractionTitle_idF360PeerInteraction=IdF360PeerInteraction
+EditF360PeerInteractionLabel_idFaculty=IdFaculty:
+EditF360PeerInteractionTitle_idFaculty=IdFaculty
+EditF360PeerInteractionLabel_uid=Uid:
+EditF360PeerInteractionTitle_uid=Uid
+ViewF360PeerInteractionTitle=View
+ViewF360PeerInteractionDestroyLink=Destroy
+ViewF360PeerInteractionEditLink=Edit
+ViewF360PeerInteractionCreateLink=Create New F360PeerInteraction
+ViewF360PeerInteractionShowAllLink=Show All F360PeerInteraction Items
+ViewF360PeerInteractionIndexLink=Index
+ViewF360PeerInteractionLabel_idF360PeerInteraction=IdF360PeerInteraction:
+ViewF360PeerInteractionTitle_idF360PeerInteraction=IdF360PeerInteraction
+ViewF360PeerInteractionLabel_idFaculty=IdFaculty:
+ViewF360PeerInteractionTitle_idFaculty=IdFaculty
+ViewF360PeerInteractionLabel_uid=Uid:
+ViewF360PeerInteractionTitle_uid=Uid
+ListF360PeerInteractionTitle=List
+ListF360PeerInteractionEmpty=(No F360PeerInteraction Items Found)
+ListF360PeerInteractionDestroyLink=Destroy
+ListF360PeerInteractionEditLink=Edit
+ListF360PeerInteractionViewLink=View
+ListF360PeerInteractionCreateLink=Create New F360PeerInteraction
+ListF360PeerInteractionIndexLink=Index
+ListF360PeerInteractionTitle_idF360PeerInteraction=IdF360PeerInteraction
+ListF360PeerInteractionTitle_idFaculty=IdFaculty
+ListF360PeerInteractionTitle_uid=Uid
