--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -37,6 +37,14 @@
             <transport-guarantee>NONE</transport-guarantee>
         </user-data-constraint>
     </security-constraint>
+    <security-constraint>
+        <display-name>staff</display-name>
+        <web-resource-collection>
+            <web-resource-name>Staff</web-resource-name>
+            <description/>
+            <url-pattern>/faces/f360/*</url-pattern>
+        </web-resource-collection>
+    </security-constraint>
     <login-config>
         <auth-method>FORM</auth-method>
         <realm-name>feedbackRealm</realm-name>
@@ -48,5 +56,9 @@
     <security-role>
         <description/>
         <role-name>superuser</role-name>
+    </security-role>
+    <security-role>
+        <description/>
+        <role-name>staff</role-name>
     </security-role>
 </web-app>
