--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -22,20 +22,16 @@
         <welcome-file>faces/index.xhtml</welcome-file>
     </welcome-file-list>
     <security-constraint>
-        <display-name>Super</display-name>
-        <web-resource-collection>
-            <web-resource-name>Super</web-resource-name>
-            <description/>
-            <url-pattern>/faces/*</url-pattern>
-        </web-resource-collection>
+        <display-name>Student</display-name>
         <web-resource-collection>
             <web-resource-name>Common</web-resource-name>
             <description/>
+            <url-pattern>/faces/*</url-pattern>
             <url-pattern>/index.xhtml</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <description/>
-            <role-name>superuser</role-name>
+            <role-name>student</role-name>
         </auth-constraint>
         <user-data-constraint>
             <description/>
@@ -52,7 +48,7 @@
         <web-resource-collection>
             <web-resource-name>Common</web-resource-name>
             <description/>
-            <url-pattern>/faces/*</url-pattern>
+            <url-pattern>/faces/index.xhtml</url-pattern>
             <url-pattern>/index.xhtml</url-pattern>
         </web-resource-collection>
         <auth-constraint>
@@ -64,6 +60,16 @@
             <transport-guarantee>NONE</transport-guarantee>
         </user-data-constraint>
     </security-constraint>
+    <security-constraint>
+        <display-name>Admin</display-name>
+        <web-resource-collection>
+            <web-resource-name>Common</web-resource-name>
+            <description/>
+            <url-pattern>/faces/index.xhtml</url-pattern>
+            <url-pattern>/index.xhtml</url-pattern>
+            <url-pattern>/faces/AdminIndex.xhtml</url-pattern>
+        </web-resource-collection>
+    </security-constraint>
     <login-config>
         <auth-method>FORM</auth-method>
         <realm-name>feedbackRealm</realm-name>
@@ -73,11 +79,15 @@
         </form-login-config>
     </login-config>
     <security-role>
-        <description/>
+        <description>Admin Rights</description>
         <role-name>superuser</role-name>
     </security-role>
     <security-role>
-        <description/>
+        <description>Faculty of PIIT</description>
         <role-name>staff</role-name>
+    </security-role>
+    <security-role>
+        <description>Students of PIIT</description>
+        <role-name>student</role-name>
     </security-role>
 </web-app>
