Added SubjectQuestion. Added new abilities in AdminIndex

--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -243,6 +243,201 @@ ListProgramCourseCreateLink=Create New ProgramCourse
 ListProgramCourseIndexLink=Index
 ListProgramCourseTitle_program=Program
 ListProgramCourseTitle_course=Course
+SubjectCreated=Subject was successfully created.
+SubjectUpdated=Subject was successfully updated.
+SubjectDeleted=Subject was successfully deleted.
+CreateSubjectTitle=Create New Subject
+CreateSubjectSaveLink=Save
+CreateSubjectShowAllLink=Show All Subject Items
+CreateSubjectIndexLink=Index
+CreateSubjectLabel_idSubject=IdSubject:
+CreateSubjectRequiredMessage_idSubject=The IdSubject field is required.
+CreateSubjectTitle_idSubject=IdSubject
+CreateSubjectLabel_subjectCode=SubjectCode:
+CreateSubjectRequiredMessage_subjectCode=The SubjectCode field is required.
+CreateSubjectTitle_subjectCode=SubjectCode
+CreateSubjectLabel_subjectSrNo=SubjectSrNo:
+CreateSubjectTitle_subjectSrNo=SubjectSrNo
+CreateSubjectLabel_subjectName=SubjectName:
+CreateSubjectRequiredMessage_subjectName=The SubjectName field is required.
+CreateSubjectTitle_subjectName=SubjectName
+CreateSubjectLabel_semester=Semester:
+CreateSubjectRequiredMessage_semester=The Semester field is required.
+CreateSubjectTitle_semester=Semester
+CreateSubjectLabel_theory=Theory:
+CreateSubjectRequiredMessage_theory=The Theory field is required.
+CreateSubjectTitle_theory=Theory
+CreateSubjectLabel_practical=Practical:
+CreateSubjectRequiredMessage_practical=The Practical field is required.
+CreateSubjectTitle_practical=Practical
+CreateSubjectLabel_tutorial=Tutorial:
+CreateSubjectRequiredMessage_tutorial=The Tutorial field is required.
+CreateSubjectTitle_tutorial=Tutorial
+CreateSubjectLabel_elective=Elective:
+CreateSubjectRequiredMessage_elective=The Elective field is required.
+CreateSubjectTitle_elective=Elective
+CreateSubjectLabel_creditTheory=CreditTheory:
+CreateSubjectRequiredMessage_creditTheory=The CreditTheory field is required.
+CreateSubjectTitle_creditTheory=CreditTheory
+CreateSubjectLabel_creditPractical=CreditPractical:
+CreateSubjectRequiredMessage_creditPractical=The CreditPractical field is required.
+CreateSubjectTitle_creditPractical=CreditPractical
+CreateSubjectLabel_creditTutorial=CreditTutorial:
+CreateSubjectRequiredMessage_creditTutorial=The CreditTutorial field is required.
+CreateSubjectTitle_creditTutorial=CreditTutorial
+CreateSubjectLabel_programCourse=ProgramCourse:
+CreateSubjectRequiredMessage_programCourse=The ProgramCourse field is required.
+CreateSubjectTitle_programCourse=ProgramCourse
+EditSubjectTitle=Edit Subject
+EditSubjectSaveLink=Save
+EditSubjectViewLink=View
+EditSubjectShowAllLink=Show All Subject Items
+EditSubjectIndexLink=Index
+EditSubjectLabel_idSubject=IdSubject:
+EditSubjectRequiredMessage_idSubject=The IdSubject field is required.
+EditSubjectTitle_idSubject=IdSubject
+EditSubjectLabel_subjectCode=SubjectCode:
+EditSubjectRequiredMessage_subjectCode=The SubjectCode field is required.
+EditSubjectTitle_subjectCode=SubjectCode
+EditSubjectLabel_subjectSrNo=SubjectSrNo:
+EditSubjectTitle_subjectSrNo=SubjectSrNo
+EditSubjectLabel_subjectName=SubjectName:
+EditSubjectRequiredMessage_subjectName=The SubjectName field is required.
+EditSubjectTitle_subjectName=SubjectName
+EditSubjectLabel_semester=Semester:
+EditSubjectRequiredMessage_semester=The Semester field is required.
+EditSubjectTitle_semester=Semester
+EditSubjectLabel_theory=Theory:
+EditSubjectRequiredMessage_theory=The Theory field is required.
+EditSubjectTitle_theory=Theory
+EditSubjectLabel_practical=Practical:
+EditSubjectRequiredMessage_practical=The Practical field is required.
+EditSubjectTitle_practical=Practical
+EditSubjectLabel_tutorial=Tutorial:
+EditSubjectRequiredMessage_tutorial=The Tutorial field is required.
+EditSubjectTitle_tutorial=Tutorial
+EditSubjectLabel_elective=Elective:
+EditSubjectRequiredMessage_elective=The Elective field is required.
+EditSubjectTitle_elective=Elective
+EditSubjectLabel_creditTheory=CreditTheory:
+EditSubjectRequiredMessage_creditTheory=The CreditTheory field is required.
+EditSubjectTitle_creditTheory=CreditTheory
+EditSubjectLabel_creditPractical=CreditPractical:
+EditSubjectRequiredMessage_creditPractical=The CreditPractical field is required.
+EditSubjectTitle_creditPractical=CreditPractical
+EditSubjectLabel_creditTutorial=CreditTutorial:
+EditSubjectRequiredMessage_creditTutorial=The CreditTutorial field is required.
+EditSubjectTitle_creditTutorial=CreditTutorial
+EditSubjectLabel_programCourse=ProgramCourse:
+EditSubjectRequiredMessage_programCourse=The ProgramCourse field is required.
+EditSubjectTitle_programCourse=ProgramCourse
+ViewSubjectTitle=View
+ViewSubjectDestroyLink=Destroy
+ViewSubjectEditLink=Edit
+ViewSubjectCreateLink=Create New Subject
+ViewSubjectShowAllLink=Show All Subject Items
+ViewSubjectIndexLink=Index
+ViewSubjectLabel_idSubject=IdSubject:
+ViewSubjectTitle_idSubject=IdSubject
+ViewSubjectLabel_subjectCode=SubjectCode:
+ViewSubjectTitle_subjectCode=SubjectCode
+ViewSubjectLabel_subjectSrNo=SubjectSrNo:
+ViewSubjectTitle_subjectSrNo=SubjectSrNo
+ViewSubjectLabel_subjectName=SubjectName:
+ViewSubjectTitle_subjectName=SubjectName
+ViewSubjectLabel_semester=Semester:
+ViewSubjectTitle_semester=Semester
+ViewSubjectLabel_theory=Theory:
+ViewSubjectTitle_theory=Theory
+ViewSubjectLabel_practical=Practical:
+ViewSubjectTitle_practical=Practical
+ViewSubjectLabel_tutorial=Tutorial:
+ViewSubjectTitle_tutorial=Tutorial
+ViewSubjectLabel_elective=Elective:
+ViewSubjectTitle_elective=Elective
+ViewSubjectLabel_creditTheory=CreditTheory:
+ViewSubjectTitle_creditTheory=CreditTheory
+ViewSubjectLabel_creditPractical=CreditPractical:
+ViewSubjectTitle_creditPractical=CreditPractical
+ViewSubjectLabel_creditTutorial=CreditTutorial:
+ViewSubjectTitle_creditTutorial=CreditTutorial
+ViewSubjectLabel_programCourse=ProgramCourse:
+ViewSubjectTitle_programCourse=ProgramCourse
+ListSubjectTitle=List
+ListSubjectEmpty=(No Subject Items Found)
+ListSubjectDestroyLink=Destroy
+ListSubjectEditLink=Edit
+ListSubjectViewLink=View
+ListSubjectCreateLink=Create New Subject
+ListSubjectIndexLink=Index
+ListSubjectTitle_idSubject=IdSubject
+ListSubjectTitle_subjectCode=SubjectCode
+ListSubjectTitle_subjectSrNo=SubjectSrNo
+ListSubjectTitle_subjectName=SubjectName
+ListSubjectTitle_semester=Semester
+ListSubjectTitle_theory=Theory
+ListSubjectTitle_practical=Practical
+ListSubjectTitle_tutorial=Tutorial
+ListSubjectTitle_elective=Elective
+ListSubjectTitle_creditTheory=CreditTheory
+ListSubjectTitle_creditPractical=CreditPractical
+ListSubjectTitle_creditTutorial=CreditTutorial
+ListSubjectTitle_programCourse=ProgramCourse
+SubjectQuestionCreated=SubjectQuestion was successfully created.
+SubjectQuestionUpdated=SubjectQuestion was successfully updated.
+SubjectQuestionDeleted=SubjectQuestion was successfully deleted.
+CreateSubjectQuestionTitle=Create New SubjectQuestion
+CreateSubjectQuestionSaveLink=Save
+CreateSubjectQuestionShowAllLink=Show All SubjectQuestion Items
+CreateSubjectQuestionIndexLink=Index
+CreateSubjectQuestionLabel_idSubjectQuestions=IdSubjectQuestions:
+CreateSubjectQuestionRequiredMessage_idSubjectQuestions=The IdSubjectQuestions field is required.
+CreateSubjectQuestionTitle_idSubjectQuestions=IdSubjectQuestions
+CreateSubjectQuestionLabel_qno=Qno:
+CreateSubjectQuestionTitle_qno=Qno
+CreateSubjectQuestionLabel_qtext=Qtext:
+CreateSubjectQuestionTitle_qtext=Qtext
+CreateSubjectQuestionLabel_idSubject=IdSubject:
+CreateSubjectQuestionTitle_idSubject=IdSubject
+EditSubjectQuestionTitle=Edit SubjectQuestion
+EditSubjectQuestionSaveLink=Save
+EditSubjectQuestionViewLink=View
+EditSubjectQuestionShowAllLink=Show All SubjectQuestion Items
+EditSubjectQuestionIndexLink=Index
+EditSubjectQuestionLabel_idSubjectQuestions=IdSubjectQuestions:
+EditSubjectQuestionRequiredMessage_idSubjectQuestions=The IdSubjectQuestions field is required.
+EditSubjectQuestionTitle_idSubjectQuestions=IdSubjectQuestions
+EditSubjectQuestionLabel_qno=Qno:
+EditSubjectQuestionTitle_qno=Qno
+EditSubjectQuestionLabel_qtext=Qtext:
+EditSubjectQuestionTitle_qtext=Qtext
+EditSubjectQuestionLabel_idSubject=IdSubject:
+EditSubjectQuestionTitle_idSubject=IdSubject
+ViewSubjectQuestionTitle=View
+ViewSubjectQuestionDestroyLink=Destroy
+ViewSubjectQuestionEditLink=Edit
+ViewSubjectQuestionCreateLink=Create New SubjectQuestion
+ViewSubjectQuestionShowAllLink=Show All SubjectQuestion Items
+ViewSubjectQuestionIndexLink=Index
+ViewSubjectQuestionLabel_idSubjectQuestions=IdSubjectQuestions:
+ViewSubjectQuestionTitle_idSubjectQuestions=IdSubjectQuestions
+ViewSubjectQuestionLabel_qno=Qno:
+ViewSubjectQuestionTitle_qno=Qno
+ViewSubjectQuestionLabel_qtext=Qtext:
+ViewSubjectQuestionTitle_qtext=Qtext
+ViewSubjectQuestionLabel_idSubject=IdSubject:
+ViewSubjectQuestionTitle_idSubject=IdSubject
+ListSubjectQuestionTitle=List
+ListSubjectQuestionEmpty=(No SubjectQuestion Items Found)
+ListSubjectQuestionDestroyLink=Destroy
+ListSubjectQuestionEditLink=Edit
+ListSubjectQuestionViewLink=View
+ListSubjectQuestionCreateLink=Create New SubjectQuestion
+ListSubjectQuestionIndexLink=Index
+ListSubjectQuestionTitle_idSubjectQuestions=IdSubjectQuestions
+ListSubjectQuestionTitle_qno=Qno
+ListSubjectQuestionTitle_qtext=Qtext
+ListSubjectQuestionTitle_idSubject=IdSubject
 Feedback2013SuggestionsCreated=Feedback2013Suggestions was successfully created.
 Feedback2013SuggestionsUpdated=Feedback2013Suggestions was successfully updated.
 Feedback2013SuggestionsDeleted=Feedback2013Suggestions was successfully deleted.
